[tool.poetry]
name = "gp-"
version = "0.1.0"
description = ""
authors = ["woodycheung <woodycheung940313.chb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
scikit-learn = "^1.4.1.post1"
matplotlib = "^3.8.4"
openpyxl = "^3.1.2"
seaborn = "^0.13.2"
graphviz = "^0.20.3"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
